...
        ) {
            Scaffold(
                topBar = {
                    TopAppBar(
                        title = {
                            Text(
                                text = "Ma liste de courses",
                                color = whiteColor,
                                fontFamily = latoFamily,
                                fontWeight = FontWeight.Black,
                                fontSize = 16.sp
                            )
                        },
...
                },
                //floatingActionButton
                floatingActionButton = {
                    ExtendedFloatingActionButton(containerColor = Color.Black,
                        contentColor = Color.White,
                        expanded = expandedFab,
                        icon = { Icon(Icons.Filled.Add, "Open Add dialog") },
                        text = { Text(text = "Ajouter") },
                        modifier = Modifier.padding(20.dp),
                        onClick = {
                            showAddDialog.value = true
                        })
                }, floatingActionButtonPosition = FabPosition.End, modifier = modifier.fillMaxSize()
...
